@@ -14,7 +14,8 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] zzxa cat command to get/set audio amplifier (rear speaker sockets). zzxa1; to enable, zzxa0; to disable (github #308)
 - [add] midi button command to toggle audio amplifier (rear speaker sockets) (github #308)
 - [add] notes field in multimeter container. They are also used in the titlebar of the containers (github #104)
-- [add] new start up options tab in setup. Now includes options to open specific forms at start up
+- [add] new start up options tab in setup. Now includes options to open specific forms at start up (GitHub #286)
+- [add] option to prevent ps from bypassing the bpfs (GitHub #413)
 - [fix] decouple of the rx1/rx2 attenuator preamp/s-att boxes from tx-att. New tx-att control, and bg colour settings in appearance (github #399)
 - [fix] multimeters would sometimes not bottom to low values out when power off, and other rare occurrences. Now resolved
 - [change] simplification improvements to db import
